--- a/src/Java/TODO.txt
+++ b/src/Java/TODO.txt
@@ -2,3 +2,11 @@
 Colors final
 Fix panel size main window(messinterface)
 logout
+
+
+seid ihr noch drin
+
+LINUX HALT
+Ja bei uns gehts
+es gibt ne todo.txt am besten da rein schreiben
+https://downdetector.com/status/discord/
